@@ -71,4 +71,4 @@ examples/animate_cells
 examples/yinyang
 examples/image_tile
 examples/stamps
-
+examples/font_table
